--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.16"
+    "@types/react-redux": "^7.1.16",
+    "firebase-tools": "^9.4.0"
   }
 }
